# maia

./: .gitignore  .gitmodules  README.md  call_agent.py  conda_packages.txt  demo.ipynb  download_exemplars.sh  environment.txt  environment.yml  install.sh  maia_api.py  main.py  pyproject.toml  requirements.txt  setup_env.sh  torch_requirements.txt
docs/: index.html
docs/experiment-browser/: index.html  script.js  styles.css
docs/static/css/: index.css
docs/static/js/: index.js
evaluation/: eval.py  plots.py
netdissect/: imgviz.py
neuron_indices/: clip-RN50.json  dino_vits8.json  resnet152.json  synthetic_neurons.json  test.json
prompts/: api.txt  user_mult.txt  user_neuron_description.txt
prompts/open/: api.txt  final.txt  user_neuron_description.txt
results/: .gitignore
server/: install_server.sh  serve_model.sh
synthetic-neurons-dataset/: README.md  synthetic_neurons.py
synthetic_neurons_dataset/: synthetic_neurons.py
synthetic_neurons_dataset/labels/: and.json  mono.json  or.json
utils/: DatasetExemplars.py  ExperimentEnvironment.py  SyntheticExemplars.py  api_utils.py  call_agent.py  flux.py  flux_kontext.py  instdiff.py  main_utils.py  requirements_instdiff_flux.txt  setup_instdiff_flux.sh
utils/agents/: __init_.py  adapters.py  agent.py  factory.py  messages.py
